k8s/services/media/app/bazarr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  parentRefs:
    - name: eg-http-bar
      namespace: core-eg
      sectionName: https
  hostnames:
    - bazarr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: bazarr
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bazarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bazarr
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/bazarr/
    clientID: bazarr
    clientSecret:
      name: bazarr-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
